[UPDATE] auth, swagger, readme
