# api/swagger.json
@@ -1,47 +1,189 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "Healthcare is a management system of clinical laboratory tests that provides a track of your results. ",
+    "description": "Healthcare is a management system of clinical laboratory tests that provides a track of your results.",
     "version": "1.0.0",
-    "title": ""
+    "title": "Healthcare Backend"
   },
   "host": "localhost:3000",
-  "basePath": "/api",
+  "basePath": "/",
   "tags": [
     {
       "name": "user",
-      "description": ""
+      "description": "Operations about user"
     }
   ],
   "schemes": [
     "http"
   ],
   "paths": {
-    "/user": {
-      "get": {
-        "tags": [
-          "user"
-        ],
-        "summary": "",
-        "operationId": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      },
+    "/login": {
       "post": {
         "tags": [
-          "user"
+          "login"
         ],
-        "summary": "",
-        "description": "",
-        "operationId": "",
+        "summary": "user login",
+        "description": "Create a jwt ",
+        "operationId": "Login",
         "produces": [
           "application/json"
         ],
         "parameters": [
           {
+            "in": "body",
+            "name": "body",
+            "description": "Created object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Login"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/users": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Create user",
+        "description": "This can only be done by and admin.",
+        "operationId": "createUser",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Created user object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Global user search",
+        "description": "This can only be done by and admin.",
+        "operationId": "globalSearch",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/users/user": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Search a user",
+        "description": "This can only be done by and admin, medic or bacte.",
+        "operationId": "userSearch",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "query",
+            "description": "name or document search",
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/users-rol": {
+      "get": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Get user by rol",
+        "description": "This can only be done by admin, medic or bacteriologits.",
+        "operationId": "rolSearch",
+        "produce": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "query",
+            "description": "req.query rol",
+            "required": true,
+            "responses": {
+              "default": {
+                "description": "successful operation"
+              }
+            }
+          }
+        ]
+      }
+    },
+    "/users-csv": {
+      "post": {
+        "tags": [
+          "user"
+        ],
+        "summary": "mass creation of users",
+        "description": "This can only be done by and admin.",
+        "operationId": "createUserCsv",
+        "parameters": [
+          {
+            "in": "formData",
+            "type": "file",
+            "name": "csv",
+            "description": "file",
+            "required": true
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": "successful operation"
+          }
+        }
+      }
+    },
+    "/users/:id": {
+      "put": {
+        "tags": [
+          "user"
+        ],
+        "summary": "Update a user",
+        "description": "This can only be done by and admin",
+        "operationId": "updateUser",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Update user",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
           }
         ],
         "responses": {
@@ -72,10 +214,30 @@
     "User": {
       "type": "object",
       "properties": {
-        "id": {
+        "numberId": {
+          "type": "number"
+        },
+        "name": {
           "type": "string"
         },
-        "username": {
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "contactNumber": {
+          "type": "number"
+        },
+        "rol": {
+          "type": "string"
+        }
+      }
+    },
+    "Login": {
+      "type": "object",
+      "properties": {
+        "userName": {
           "type": "string"
         },
         "password": {
@@ -83,17 +245,13 @@
         }
       }
     },
-    "ApiResponse": {
+    "LoginResponse": {
       "type": "object",
       "properties": {
-        "code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "type": {
+        "token": {
           "type": "string"
         },
-        "message": {
+        "userRol": {
           "type": "string"
         }
       }
